# LeanAide

./: .envrc   .gitignore  .gitmodules  408854cc-de57-4c28-9e17-b058ff2989d1-output.lean  6ac4c6d1-9704-469c-ad17-32911bb596fd-output.lean  CheckDescs.lean  CodeAction.lean  DiagReasoningLoop.mmd  Dockerfile  Examples.lean  Extras.lean  JSONtoYAML.lean  Kantorovich-aristotle.lean  Kantorovich.tex  Kantorovich_aristotle.lean  Kantorovich_failed_aristotle.lean  Kantorovich_old_aristotle.lean  LeanAide.lean  LeanAideTest.lean  LeanCodePrompts.lean  Main.lean  MathDoc_gtp.json  Notation.json  PlanSept25.md  README.md  ReasoningLoop.md  RenPhil-Oct25.md  Renaissance.md  StatementAutoformalisation.lean  TacticExtraction.lean  TrigIdentity.lean  Zulip-announce.md  amm  annotatekwds.lean  app2.py  background.md  batchcheck.lean  benchmark_embeddings.lean  bulkchk.lean  bulkelab.lean  (+71 more)
.logs/: README.md  prompt-eg.md
ClientTest/: .gitignore  ClientTest.lean  lake-manifest.json  lakefile.toml
Mathbin/: All.lean
server/: README.md  a.py  api_server.py  benchmark_utils.py  fast_api.py  health_check.py  leanaide_serv.py  llm_prompts.py  llm_response.py  logging_utils.py  postoffice.py  pyproject.toml  requirements.txt  serv_utils.py  streamlit_ui.py  test.py
server/pages/: intro.py  server_response.py  structured_json.py
server/tabs/: benchmark.py  home.py  logs_display.py  server_response.py  structured_json.py  token_response.py
streamlit_server/: .env.example  README.md  pyproject.toml  requirements.txt  slt_ui.py
streamlit_server/prompts/: MathDoc.md  ProofJsonShorter.md
(+5331 files in other folders)
