[project]
name = "leanaide_serv"
version = "0.1.0"
description = "Leanaide Streamlit Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "streamlit-sortables>=0.3.1",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
    "copykitten>=1.2.2",
    "st-copy>=1.1.0",
]
