[project]
name = "leanaide-streamlit-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.61.1",
    "pillow>=11.1.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "streamlit-sortables>=0.3.1",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
]
